tests/codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.empty.array.infer/rt_codegen_err_empty_array_infer.mon
;; TEST-ID: tests.codegen.rt-codegen-err-empty-array-infer
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.empty.array.infer
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: compile-fail
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen rejects empty arrays without an explicit element type.
;; TEST-ATOM: (define xs []) must fail because an empty array has no inferred element type.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/compile-fail branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.empty.array.infer
;; TEST-MENU-PATH: codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.empty.array.infer
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.empty.array.infer
;; TEST-CLI-TARGET: codegen errors codegen compile-fail
(module Main)
(define xs [])
